src/less/site.less
@active-lang-color: #3E7B8B;
@main-color: #E2F3F7;
@links-color: #0090B4;
@link-hover-color:#BEE2EB;
@white-color: #FFF;
@navbar-copyright-bg-color: #4F9EB2;
@arrow-right-color: #C00000;
@screen-sm-min: 768px;
@screen-md-min: 992px;
@screen-lg-min: 1200px;

body {
    margin: 0;
    padding: 0;
    font-size: large;
    a {
	color: @links-color;
    }
    a:hover {
	text-decoration: none;
    }
}

.navbar {
    background-color: @navbar-copyright-bg-color;
    border-radius: 0px;

    a {
	color: @white-color;
    }

    #fatf-logo {
	position: absolute;
	top: 0px;
    }

    #languages,#calendar {
	text-align: right;
	padding-top: 15px;
	font-size: medium;
	white-space: nowrap;
    }
    #languages {
	.active {
	    background-color: @active-lang-color;
	    padding: 3px 5px;
	}

	img {
	    padding: 0px 7px 0px 2px;
	    width: 30px;
	}
	font-size: small;
    }

    #search-btn {
	color: @white-color;
	background-color: @active-lang-color !important;
	border: 1px solid @active-lang-color;
	border-radius: 0px;

    }
    #srch-term {
	border: 0px;
	border-radius: 0px;
    }
    .navbar-form {
	padding: 0px;
	text-align: right;
    }

    #links {
	a {
	    color: @white-color;
	}

	a:hover{
	    color: @link-hover-color;
	}
	.active-link {
	    color: @link-hover-color;
	}
	.active-link:before {
	    content: '';
	    position: absolute;
	    width: 0px;
	    height: 0px;
	    left: 50%;
	    bottom: -5px;
	    margin-left: -6px;
	    border-top: 6px solid @navbar-copyright-bg-color;
	    border-left: 6px solid transparent;
	    border-right: 6px solid transparent;
	}
    }

    .navbar-collapse {
	border-color: @navbar-copyright-bg-color;
    }
    .navbar-toggle {
	border-radius: 0px;
	border: 0px;
	border-left: 2px solid @white-color;
	margin: 0px;
	color: @white-color;
	font-size: xx-small;
	text-align: center;
	min-height: 50px;
	padding-top: 12px;

	.icon-bar {
	    background-color: @white-color;
	    margin-left: auto;
	    margin-right: auto;
	}
    }
}

.media-left img {
    padding: 0px 10px 10px 0px;
}

#news {
    margin-top: 30px;

    h1 {
	margin-left: 13px;
    }

    h4 {
	color: @links-color;
    }

}

.reports-link {
    font-weight: bold;
}

.separator {
    margin-top: 30px;
    height: 1px;
    background-color: @main-color;
    text-align: right;
    a {
	background-color: @white-color;
	padding: 1px 1px 1px 1px;
	position: relative;
	top: -11px;
    }
}


#topics {
    a {
	background-color: @main-color;
	border: 0px;
	border-radius: 0px;
    }
    a:hover {
	background-color: @links-color;
	color: @white-color;
    }

    .active-link {
	background-color:@links-color;
	color: @white-color;
    }
}

.read-more-icon {
    font-size: xx-large;
    font-weight: bolder;
}

#key-publications{
    h4,h3 {
	color: @links-color;
    }
}

.news-item {
    max-height: 200px;
    min-height: 200px;
}

.read-more {
    text-decoration: none;
    margin-top: 30px;

    .read-more-icon {
	font-size: x-large;
	font-weight: bold;
	margin-right: 5px;
    }

    .read-more-text {
	font-size: large;
    }
}

.news-item {
    max-height: 210px;
    min-height: 210px;
}

.read-more {
    text-decoration: none;
    margin-top: 30px;

    .read-more-icon {
	font-size: x-large;
	font-weight: bold;
	margin-right: 5px;
    }

    .read-more-text {
	font-size: large;
    }
}

#social-networks {
    li {
	float: left;
	display: block;
    }
}

.icon {
    margin: 0px 1px 0px 1px;
    width: 56px;
    height: 56px;
    display: block;
}

.icon.sn {
    text-indent: -9999px;
    background-repeat: no-repeat;
}

.facebook {
    background-image: url(img/fb_small.png);
}

.twitter {
    background-image: url(img/twitter_small.png);

}

.e-mail-alerts {
    color: @white-color;
    text-indent: 0px;
    width: 120px;
    background-color: @navbar-copyright-bg-color;
    text-align: center;
    vertical-align: middle;
    line-height: 56px;
}

.sn-text {
    margin-top: 25px;
}

#follow-us {
    display: inline-block;
    div {
	float: left;
    }
}

#follow-us-text {
    margin-top: 25px;
    margin-right: 5px;
}

.collapse, .collapsing {
    margin-left: 92px;
}

footer {
    margin-top: 20px;
    background-color: @main-color;
    border-top: 2px solid @links-color;

    h5 {
	font-weight: bold;
	font-size: large;
    }

    li {
	padding: 0px 0px 5px 0px;
    }

    #follow-us-text {
	font-weight: bold;
    }

    .glyphicon-arrow-right {
	font-size: small;
	color: @arrow-right-color;
	font-weight: normal;
    }
}


#copyright {
    text-align: center;
    margin-top: 20px;
    background-color: @navbar-copyright-bg-color;
    color: @white-color;
    font-size: small;
    padding: 10px 0px 10px 0px;
    a {
	color: @white-color;
    }
}

/* Small devices (tablets, 768px and up) */
@media (min-width: @screen-sm-min) {
    .news-item {
	max-height: 300px;
	min-height: 300px;
    }

    .read-more {
	margin-bottom: 15px;
	margin-right: 15px;
    }

    #copyright {
	text-align: left;
    }

    .icon {
	margin: 0px 10px;
    }
}

/* Medium devices (desktops, 992px and up) */
@media (min-width: @screen-md-min) {
    .news-item {
	max-height: 375px;
	min-height: 375px;
    }
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: @screen-lg-min) {
    .news-item {
	max-height: 350px;
	min-height: 350px;
    }

    .icon {
	width: 70px;
	height: 70px;
	display: block;
    }

    .e-mail-alerts {
	width: 190px;
	line-height: 70px;
    }

    .facebook {
	background-image: url(img/fb.png);

    }
    .twitter {
	background-image: url(img/twitter.png);
    }
}

